@@ -6,6 +6,8 @@ pyReScene 0.5 (2013-03-)
  * ReScene: able to reconstruct RAR 2.0x archives
  * ReScene: solid archives fix (threading issue)
  * ReScene: fix for archives larger than 4GB
+ * ReScene: support for compression failure from RELOADED
+            (larger packed size than unpacked size)
  * ReSample: fixed KeyError on sample reconstruction
  * pyReScene Auto: DVDx and DISCx subfolders added
  * preprardir.py: bug with copying license file on Linux fixed
